--- a/index.html
+++ b/index.html
@@ -530,6 +530,8 @@
             opacity: 0;
             pointer-events: none;
             transition: opacity var(--transition-base);
+            overflow: hidden;
+            min-height: 0;
         }
 
         .editor-panel.active {
@@ -617,10 +619,13 @@
             flex: 1;
             display: none;
             overflow: hidden;
+            height: 100%;
+            min-height: 0; /* Important for flex children */
         }
 
         .editor-content.active {
             display: flex;
+            flex-direction: column;
         }
 
         /* Code Editor */
@@ -630,6 +635,9 @@
             font-family: var(--font-mono);
             font-size: 14px;
             line-height: 22px;
+            height: 100%;
+            min-height: 0; /* Important for flex children */
+            overflow: hidden; /* Prevent double scroll */
         }
 
         .line-numbers {
@@ -642,6 +650,8 @@
             min-width: 60px;
             overflow: hidden;
             font-size: 13px;
+            flex-shrink: 0;
+            height: 100%;
         }
 
         .line-numbers div {
@@ -664,6 +674,8 @@
             scroll-behavior: smooth;
             scroll-snap-type: y proximity;
             font-family: var(--font-mono);
+            min-height: 0; /* Important for flex */
+            height: 100%;
         }
         
         .code-area::-webkit-scrollbar-thumb {
